[project]
name = "zsequencer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "eigensdk==0.0.3",
    "flask==3.0.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "validators==0.34.0",
    "tenacity==9.0.0",
    "validators==0.34.0",
    "web3==7.4.0",
    "xxhash==3.4.1",
]

[dependency-groups]
dev = [
    "mypy",
    "poethepoet",
    "ruff",
    "sphinx==7.1.2",
    "sphinx-rtd-theme==1.3.0rc1"
]

[tool.uv]
default-groups = "all"

# NOTE: We need to use poethepoet until uv supports development-time scripts. For more
# information, visit https://github.com/astral-sh/uv/issues/5903.
# Usage example: uv run poe fmt
[tool.poe.tasks]
mypy = "mypy ."
typecheck = ["mypy"]

ruff-check = "ruff check"
lint = ["ruff-check"]

ruff-sort-imports = "ruff check --select I --fix ."
ruff-format = "ruff format ."
fmt = ["ruff-sort-imports", "ruff-format"]

[tool.mypy]
exclude = [
    "^venv/",
    "^\\.venv/",
    "^env/",
    "^\\.env/",
    "^build/",
    "^dist/",
    "^docs/",
]
# Allows Type[T] to refer to abstract classes, which is not otherwise supported.
# See https://github.com/python/mypy/issues/4717
disable_error_code = "type-abstract"

mypy_path = "."
namespace_packages = true
explicit_package_bases = true
no_implicit_optional = true

strict_equality = true
implicit_reexport = false

warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true

pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
show_traceback = true

plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
# This list should be checked periodically. Maybe, one of them becomes type-safe.
module = [
    "eigensdk.*"
]
ignore_missing_imports = true

[tool.ruff]
exclude = [
    "docs",  # TODO: Should be removed once the errors have been fixed.
]
